# Evelynn

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  package-lock.json  package.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: cd-inference.yml  ci-inference.yml  release.yml
backend/: .gitignore  Makefile  README.md
backend/services/inference/: .env.example  Dockerfile  README.md  docker-compose.monitoring.yml  docker-compose.prod.yml  docker-compose.yml  pyproject.toml
backend/services/inference/app/: main.py
backend/services/inference/app/api/v1/: __init__.py
backend/services/inference/app/api/v1/routes/: generate.py  health.py
backend/services/inference/app/core/: config.py  logging.py
backend/services/inference/app/middleware/: auth.py
backend/services/inference/app/models/: schemas.py
backend/services/inference/app/services/: image_generator.py  storage.py
backend/services/inference/monitoring/: prometheus.yml
backend/services/inference/monitoring/grafana/provisioning/dashboards/: dashboard.yml  inference.json
backend/services/inference/requirements/: base.txt  dev.txt  gpu.txt
backend/services/inference/scripts/: start.sh  test-api.sh
backend/services/inference/tests/: conftest.py  test_generate.py  test_health.py  test_schemas.py
backend/text-to-image/: .env.example  requirements.txt  (+1 more)
docs/: system-design.excalidraw
frontend/: .env.example  eslint.config.js  next.config.js  package-lock.json  package.json
(+45 files in other folders)
