[project]
name = "evelynn-inference"
version = "1.0.0"
description = "Evelynn - Text-to-Image Inference Service"
requires-python = ">=3.12.10"

[tool.ruff]
# Set the maximum line length to 79.
line-length = 150

[tool.ruff.lint]
# Add the `line-too-long` rule to the enforced rule set. By default, Ruff omits rules that
# overlap with the use of a formatter, like Black, but we can override this behavior by
# explicitly adding the rule.
extend-select = ["E501"]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.mypy]
python_version = "3.12.10"
strict = false
ignore_missing_imports = true
exclude = ["tests/"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v --tb=short --cov=app --cov-report=term-missing"

[tool.coverage.run]
patch = ["subprocess"]
omit = ["tests/*", "app/main.py"]